# arvatoKaggle

./: .gitignore  Dockerfile  README.md  capstone_report.md  config.py  customers_analises.ipynb  customers_analises_pycharm.ipynb  dask_experiments.ipynb  data.dvc  load_files_w_class.ipynb  log_manager.py  logistic_base.ipynb  pyproject.toml  settings.toml  where_is.py
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/cleaned_after_pipeline/: population.csv.dvc
data/cleaned_data/: azdias_clean.csv.dvc  customers_clean.csv.dvc
data/wrangler/: azdias_costumer_to_nan.csv.dvc
helpers/: __init__.py  kaggle_submission.py  projetct_paths.py
mlruns/1/: meta.yaml
mlruns/1/0c26109a5a2040d0ac0d2c5900930c49/: meta.yaml
mlruns/1/0d80379e5032457e94d7b896fa5c3b59/: meta.yaml
mlruns/1/0d905131abdb43428d84050ff7d6a6f0/: meta.yaml
mlruns/1/114d8e37cebd402eb40bc6cafe526e8d/: meta.yaml
mlruns/1/15eaf89562454ef18d2b32d8e70fa761/: meta.yaml
mlruns/1/16cd1376f4044cffa817c02ea13d0697/: meta.yaml
mlruns/1/17fd467acb334cb6be4e505546e17466/: meta.yaml
mlruns/1/1c91a2d62e3849c1acb0e2dd7960c13c/: meta.yaml
mlruns/1/1df4e73806ef48a0a0d817e566b69136/: meta.yaml
mlruns/1/25a8d2051e8049e0bbf699b7baa8b598/: meta.yaml
mlruns/1/30a4b291890e49b893fea5529b9a0a23/: meta.yaml
mlruns/1/3d752e5c95e5450cbfcaab252a09568a/: meta.yaml
mlruns/1/4ee9afba53dc4f42a8aa161abc4c574c/: meta.yaml
mlruns/1/7a18774da6dc4aa58ea0b591f7c8ceca/: meta.yaml
mlruns/1/8384389c07044d488e5eb041bc13b75c/: meta.yaml
mlruns/1/86d1a89b7be7430fb91d53b45c1d3f42/: meta.yaml
mlruns/1/9ec46b4df1d84417862a2d5587acafea/: meta.yaml
mlruns/1/a7bb052ec2064843bcc1f0928cc906ad/: meta.yaml
mlruns/1/b2344207d37e480186326393e28e96fb/: meta.yaml
mlruns/1/b47f13d3f76742a089641f0b18b10a4c/: meta.yaml
mlruns/1/bb4d73f05eac46d381043f5db8000c40/: meta.yaml
mlruns/1/be16decd66d64f7ca9e068e885c6ed91/: meta.yaml
mlruns/2/: meta.yaml
mlruns/3/: meta.yaml
mlruns/4/: meta.yaml
models/: catboost_first  catboost_first.cbm  constants.py  pipeline.py
notebooks/: Arvato Project Workbook.ipynb  analyse_one.ipynb  cat_pred_class.ipynb  customers_analises_pycharm.ipynb  last_cat.ipynb  load_files_w_class.ipynb  load_files_w_class_dask.ipynb  logistic_base.ipynb  supervised_learning.ipynb  temp-find-bug.ipynb  test_d19_soziales.ipynb  test_file_cat.ipynb  testing_dvc.ipynb  train_d19_soziales.ipynb  train_file_cat.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/mlruns/0/: meta.yaml
process_and_ml/: __init__.py  data_wrangler.py  feature_engineer.py  ml_flow_control.py  models.py  pipeline.py  pipelines.py  pycaret.ipynb  train.py  where_is.py
(+318 files in other folders)
