[tool.poetry]
name = "ArvatoCapstoneProject"
version = "0.1.0"
description = "Machie Learning Engineer NanoDegree Capstone Project"
authors = ["Jair Bitcoin <bravosinvest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "^1.15.0"
torch = "^1.6.0"
torchvision="0.7.0"
jupyterlab = "^3.0.6"
jupyter = "^1.0.0"
openpyxl = "^3.0.6"
sklearn = "^0.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
opencensus = "^0.7.12"
pandas = "^1.2.2"
catboost = "^0.24.4"
kaggle = "^1.5.10"
dvc = "^1.11.16"
dynaconf = "^3.1.2"
mlflow = "^1.14.1"
shap = "^0.39.0"
modin = {extras = ["all"], version = "^0.9.1"}
dask-ml = "^1.8.0"
dask = {version = "2.19.0", extras = ["dataframe"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.0"
pytest-mock = "^3.5.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
